fixed header alignment

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     "dropdown ."
     "displayInfo displayInfo"
     "review review";
+    grid-template-columns: 1fr 1fr;
     grid-gap: 10px;
     background-color: lavender;
     font-family: monospace;
@@ -18,6 +19,8 @@ body{
 
 header{
     background-color: skyblue;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     grid-area: header;
 }
 
@@ -40,7 +43,7 @@ header img{
 
 #review{
     grid-area: review;
-    text-align: center;
+    margin: 0 auto;
 }
 #review input[type="submit"]{
     width:200px;
